# blocks

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.txt  blocks.sqlite3-journal
lib/stb/: stb.c  stb_perlin.h
res/: config.glsl  helpers.glsl  hit.frag  hit.vert  raycast.frag  raycast.vert  sky.frag  sky.vert  ui.frag  ui.vert  voxel.vert  world.frag  world.vert
shaders/: blur.comp  chunk.frag  chunk.vert  composite.comp  composite.frag  config.glsl  cube.hlsl  depth.frag  depth.vert  fullscreen.vert  fxaa.comp  helpers.glsl  light.hlsl  opaque.frag  opaque.vert  predepth.vert  random.hlsl  raycast.frag  raycast.vert  shader.hlsl  shadow.hlsl  shadow.vert  sky.frag  sky.hlsl  sky.vert  ssao.comp  ssao.frag  transparent.frag  transparent.vert  ui.comp  ui.frag  ui.vert  voxel.hlsl  world.frag  world.vert
src/: block.c  block.h  buffer.c  buffer.h  camera.c  camera.h  check.h  chunk.c  chunk.h  config.h  containers.c  containers.h  database.c  database.h  direction.h  helpers.c  helpers.h  light.h  main.c  map.c  map.h  noise.c  noise.h  physics.c  physics.h  pipeline.c  player.c  player.h  rand.c  rand.h  save.c  save.h  shader.c  shader.h  sky.c  sky.h  sort.c  sort.h  voxel.c  voxel.h  (+8 more)
textures/: atlas.xcf
